<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprincesopc2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtagregar"
        android:layout_width="273dp"
        android:layout_height="102dp"
        android:gravity="center"
        android:text="@string/instruccion"
        android:textColor="@color/Yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/finalhorizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nombre"
        android:textColor="@color/Gold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textColor="@color/Gold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <TextView
        android:id="@+id/txtcali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calificacion"
        android:textColor="@color/Gold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:layout_constraintVertical_bias="0.34" />

    <EditText
        android:id="@+id/cuadrotitulo"
        android:layout_width="220dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insertatitulo"
        android:inputType="textPersonName|textCapCharacters"
        android:maxLength="35"
        android:textColor="@color/WhiteSmoke"
        android:textColorHint="@color/WhiteSmoke"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/finalhorizontal"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/txttitulo"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cuadrofecha"
        android:layout_width="74dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insertafecha"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/WhiteSmoke"
        android:textColorHint="@color/WhiteSmoke"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/txtcali"
        app:layout_constraintEnd_toStartOf="@+id/finalhorizontal"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toEndOf="@+id/txtfecha"
        app:layout_constraintTop_toBottomOf="@+id/cuadrotitulo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cuadrocali"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insertacali"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="@color/WhiteSmoke"
        android:textColorHint="@color/WhiteSmoke"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintStart_toEndOf="@+id/txtcali"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="53dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/finalvertical"
        app:layout_constraintEnd_toStartOf="@+id/finalhorizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cuadrocali"
        app:layout_constraintTop_toBottomOf="@+id/cuadrotitulo"
        app:layout_constraintVertical_bias="0.202"
        app:srcCompat="@drawable/estrellita" />

    <Spinner
        android:id="@+id/cajagenero"
        android:layout_width="192dp"
        android:layout_height="59dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="12dp"
        android:background="@android:drawable/spinner_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/finalhorizontal"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/botonagregar"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_azul"
        android:gravity="center"
        android:text="@string/agregar"
        android:textColor="@color/WhiteSmoke"
        app:layout_constraintEnd_toStartOf="@+id/finalhorizontal"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <Button
        android:id="@+id/botonver"
        android:layout_width="139dp"
        android:layout_height="36dp"
        android:background="@drawable/boton_azul"
        android:text="@string/mispelis"
        android:textColor="@color/WhiteSmoke"
        app:layout_constraintBottom_toTopOf="@+id/finalvertical"
        app:layout_constraintEnd_toStartOf="@+id/finalhorizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/botonagregar"
        app:layout_constraintVertical_bias="0.191" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="436dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="167dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="236dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/finalvertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="580dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="14dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="94dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="72dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/finalhorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="350dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="318dp" />

    <TextView
        android:id="@+id/txtselecgenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/selegenero"
        android:textColor="@color/Gold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/finalhorizontal"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        app:layout_constraintVertical_bias="0.093" />

</androidx.constraintlayout.widget.ConstraintLayout>